app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
 }

 body {
   background-color: #bbbbbb
 }

 .container {
   width: 80%;
   height: 100%;
   margin: 0 auto;
 }

header {
  background: #368fc8
}

.logo {
  float: left;
}

.field_with_errors {
  border: 2px solid red;
  background-color: rgba(224, 24, 24, 0.5);
}

.error-explanation li{
  padding: 10px 5px 0px 5px;
  list-style: none;
  font-weight: 600;
  font-size: 1.15em;
}

.welcome {
  height: 50%;
  font-weight: 600;
  margin-left: 25px;
  float: left;
  padding-top: 40px;
}

.authform-or {
  margin-bottom: 10px;
  overflow: hidden;
  text-align: center;
  color: rgb(51, 51, 51);
  font-weight: bold;"
}

.streak-disp {
  height: 50%;
  font-weight: 600;
  font-size: 35px;
}


.logo img{
  float: left;
}

nav {
  float: right;
}

header::after{
  content: '';
  display: table;
  clear: both;
}


nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

nav li {
  display: inline-block;
  margin-left: 70px;
  padding-top: 25px;
}

nav a {
  color: #000000;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 16px;
}

nav a:hover {
  color: #474646;
}


body a {
  color: black;
}

.right {
  float: right;
}

.authform {
  padding-top: 30px;
  width: 200px;
  max-width: 320px;
  margin: 0 auto;
}

.authform h1 {
  margin: 15px 5px;
}

.authform input {
  display: block;
  width: 100%;
  height: 34px;
  padding: 6px 12px;
  font-size: 14px;
  line-height: 1.42857143;
}

.authform label {
  display: inline-block;
  max-width: 100%;
  margin-bottom: 5px;
  font-weight: bold;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.danger {
  margin-bottom: 10px;
}

.create-col {
  width: 50%;
  align-items: center;
  margin: 0 auto;
}

.create-col input {
  width: 100%;
}

.notice, .danger {
  background-color: rgba(205, 18, 49, 0.54);
  font-weight: 600;
}

.alert-danger {
  background-color: rgba(205, 18, 49, 0.54);
  font-weight: 600;
  margin-bottom: 15px;
  padding: 10px;
  text-align: center;

}

.app-logo {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.centered {
    position: absolute;
    width: 180px;
    height: auto;
    left: 50%;
    top: 50%;
    margin-left: -50px;
    margin-top:-300px;
}

.welcome-main {
  background-color: yellow;
  padding: 5px;
  font-weight: 600;
  margin: 5px 0px;
}

.gameTable {
  background-color: white;
  padding: 5px 10px;
}

.gameTable .opponent-home:hover,
.opponent-away:hover {
  background-color: rgb(240, 190, 12);
}

.scoring-table th {
  text-align: center;
}

.scoring-table td.side:hover {
  background-color: red;
}

.scoring-table button {
  text-align: center;
  width: 85%;
  height: 75px;
  display: block;
  margin: 0 auto;
}

.leaderboard-wrapper table {
  margin: 0 auto;
}

.prop-locked, .prop-scored{
  background-color: #7d7c7c
}

.prop-container {
  float: left;
}

.status-container {
  background-color: black;
  height: 15px;
}

.prop-pending {
  background-color: yellow;
}

.selected {
  background-color: orange;
}

.prop-win {
  background-color: green;
}

.prop-loss {
  background-color: red;
}

.signup {
  padding-top: 20px;
}

.signin-errors ul li{
  margin: 10px 3px 5px;
  padding: 10px 5px 0px 15px;
  position: relative;
  list-style: none;
  font-weight: 600;
  background-color: yellow;
}

.google-signin {
  text-align: center;
}

.add-props {
  text-align: center;
  text-decoration: none;
}

.button {
  transition-duration: 0.4s;
  margin: 15px auto;
  height: auto;
  width: auto;
  padding: 10px 35px;
}

.button:hover {
  background-color: #4c79af;
  color: white;
}

.prop-show {
  width: auto;
  height: auto;
  left: 30%;
  top: 50%;
  margin-left: 0px;
  margin-top: -250px;
  border: solid aquamarine;
  padding: 25px;
}

